# ComfyAngel

./: .gitignore  CLAUDE.md  README.md  __init__.py  api_routes.py  pyproject.toml
.claude/: skills
.claude/agents/: comfyui-node-builder.md
docs/: PRD.md  folder-validation.md
docs/design/: TODO.md
examples/: Color-Resolution-Picker.json  ComfyAngel Example.json  LoadImageBatch-Loop.json  LoadImagesBatchFromFolder.json  SmartCrop.json  Text Permutation.json
js/: color_utils.js  color_widget.js  composite_widget.js  crop_widget.js  folder_widget.js  json_extract_widget.js  position_widget.js  resolution_widget.js  text_preview_widget.js
nodes/: __init__.py  loader_nodes.py  loop_nodes.py  overlay_nodes.py  widget_nodes.py
research/: advanced-comfyui-concepts-2026-01-19.md  ai-image-model-resolutions-2025-01-16.md  comfyui-custom-node-best-practices-2026-01-15.md  comfyui-node-development-2025-01-19.md  comfyui-official-node-spec-2026-01-19.md  existing-nodes-analysis-2026-01-15.md  image-processing-comfyui-2025-01-19.md  pytorch-tensors-comfyui-2026-01-19.md  text-rendering-comfyui-2025-01-19.md
utils/: __init__.py  color_utils.py  loop_utils.py  metadata_parser.py  tensor_ops.py  text_renderer.py
