[project]
name = "comfyangel"
description = "Parameter Overlay & Visual Widget nodes for ComfyUI - Display generation parameters on images"
version = "0.2.0"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow>=9.0.0"]
keywords = ["comfyui", "custom-nodes", "overlay", "metadata", "parameters"]

[project.urls]
Repository = "https://github.com/ThepExcel/ComfyAngel"

[tool.comfy]
PublisherId = "thepexcel"
DisplayName = "ComfyAngel"
Icon = ""
