[project]
name = "comfyangel"
description = "Parameter Overlay, Visual Widgets & Loop nodes for ComfyUI - Display generation parameters on images, true loop without Auto Queue"
version = "0.4.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow>=9.0.0"]
keywords = ["comfyui", "custom-nodes", "overlay", "metadata", "parameters", "loop", "iteration"]

[project.urls]
Repository = "https://github.com/ThepExcel/ComfyAngel"

[tool.comfy]
PublisherId = "thepexcel"
DisplayName = "ComfyAngel"
Icon = ""
